[package]
name = "fc-consensus"
version = "2.0.0-dev"
authors = ["Axia Technologies <admin@axia.io>"]
description = "Frontier consensus for substrate"
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/axiatech/frontier/"

[dependencies]
async-trait = "0.1"
thiserror = "1.0"

sp-api = { version = "4.0.0-dev", git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-block-builder = { version = "4.0.0-dev", git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-consensus = { version = "0.10.0-dev", git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-runtime = { version = "5.0.0", git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-consensus = { version = "0.10.0-dev", git = "https://github.com/axtend/axlib", branch = "axlib" }

fp-consensus = { version = "2.0.0-dev", path = "../../primitives/consensus" }
fp-rpc = { version = "3.0.0-dev", path = "../../primitives/rpc" }
fc-db = { version = "2.0.0-dev", path = "../db" }
