[package]
name = "pallet-evm-precompile-sha3fips"
version = "2.0.0-dev"
authors = ["Axia Technologies <admin@axia.io>", "Drew Stone <drew@commonwealth.im>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/axiatech/frontier/"
description = "SHA3 FIPS202 precompile for EVM pallet."

[dependencies]
tiny-keccak = { version = "2.0", features = ["fips202"] }

fp-evm = { version = "3.0.0-dev", path = "../../../../primitives/evm", default-features = false }

[features]
default = ["std"]
std = [
	"fp-evm/std",
]
